--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,19 @@
 body {
   font-family: "Poppins", sans-serif;
 }
+.page {
+  border: 1px solid none;
+
+  padding: 30px;
+  margin: 50px auto;
+  max-width: 600px;
+}
 .weather-app {
   border: 1px solid;
   border-color: #d5d5d5;
   border-radius: 5px;
-  padding: 30px;
-  margin: 50px auto;
+  padding: 30px 30px 0px 30px;
+  margin: 50px auto 5px;
   max-width: 600px;
 }
 .current-button-column {
@@ -65,4 +72,8 @@ ul {
   padding: 0px 15px;
   text-align: center;
   font-size: 20px;
+}
+.footer {
+  font-size: 14px;
+  position: relative;
 }
