--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,6 @@ body {
 }
 .page {
   border: 1px solid none;
-
   padding: 30px;
   margin: 50px auto;
   max-width: 600px;
@@ -12,7 +11,7 @@ body {
   border: 1px solid;
   border-color: #d5d5d5;
   border-radius: 5px;
-  padding: 30px 30px 0px 30px;
+  padding: 30px;
   margin: 50px auto 5px;
   max-width: 600px;
 }
