--- a/src/style.css
+++ b/src/style.css
@@ -38,7 +38,7 @@ ul {
 .below-city {
   padding-left: 15px;
 }
-.description {
+.description:first-letter {
   text-transform: capitalize;
 }
 .main-temperature {
