--- a/src/style.css
+++ b/src/style.css
@@ -37,6 +37,8 @@ ul {
 
 .below-city {
   padding-left: 15px;
+  position: relative;
+  top: 15px;
 }
 .description:first-letter {
   text-transform: capitalize;
@@ -45,6 +47,7 @@ ul {
   font-size: 50px;
   text-align: right;
   break-inside: avoid-column;
+  padding-right: 0;
 }
 
 .active {
@@ -53,11 +56,15 @@ ul {
   color: black;
 }
 
-.celsius,
-.fahrenheit,
-.space {
-  font-size: 17px;
+.units {
+  position: relative;
+  break-inside: avoid-column;
   vertical-align: top;
+  font-size: 17px;
+}
+
+.fahrenheit,
+.celsius {
   text-decoration: none;
 }
 .humidity-wind {
@@ -65,6 +72,8 @@ ul {
   padding-left: 0px;
   float: right;
   break-inside: avoid-column;
+  position: relative;
+  top: 15px;
 }
 
 .columns-days {
