--- a/src/style.css
+++ b/src/style.css
@@ -22,10 +22,11 @@ ul {
 .weather-app {
   border: 1px solid;
   border-color: #d5d5d5;
-  border-radius: 5px;
+  border-radius: 10px;
   padding: 30px;
   margin: 50px auto 5px;
   max-width: 700px;
+  box-shadow: 3px 3px 3px rgba(219, 219, 219, 0.5);
 }
 .current-button-column {
   padding: 0px;
@@ -92,4 +93,5 @@ ul {
 .footer {
   font-size: 14px;
   position: relative;
+  margin-top: 10px;
 }
